--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-rus">
 <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -6,7 +7,10 @@
 </head>
 <body>
     <div class="aaa"><img src="./eisenhower-matrix.jpg">
-        <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
+        <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+            Want more details&quest;
+        </a>
+    </div>
     <div class="centered-main-page-element">
         <p id="topSectionForAddingElementToList">
             <label for="new-task">
@@ -18,7 +22,8 @@
                     Add
                 </button>
             </div>
-    </p><h3>Todo</h3>
+        </p>
+    <h3>Todo</h3>
     <ul id="incompleteTasks">
         <li><input type="checkbox">
             <label class="task">
@@ -57,6 +62,6 @@
         </li>
     </ul>
     </div>
-<script type="text/javascript" SRC="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
