--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div class="aaa"><img src="./eisenhower-matrix.jpg">
-        <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+        <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
             Want more details&quest;
         </a>
     </div>
     <div class="centered-main-page-element">
-        <p id="topSectionForAddingElementToList">
+        <p id="top-section-fo-adding-element-to-list">
             <label for="new-task">
                 Add Item
             </label>
@@ -24,7 +24,7 @@
             </div>
         </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="incomplete-tasks">
         <li><input type="checkbox">
             <label class="task">
                 Pay Bills
@@ -37,7 +37,7 @@
                 <img src="./remove.svg">
             </button>
         </li>
-        <li class="editMode"><input type="checkbox">
+        <li class="edit-mode"><input type="checkbox">
             <label class="task">
                 Go Shopping
             </label>
