--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-    <div class="aaa"><img src="./eisenhower-matrix.jpg">
+    <div class="info"><img src="./eisenhower-matrix.jpg">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
             Want more details&quest;
         </a>
     </div>
-    <div class="centered-main-page-element">
-        <p id="top-section-fo-adding-element-to-list">
+    <div class="content">
+        <p id="adding-element">
             <label for="new-task">
                 Add Item
             </label>
@@ -30,10 +30,10 @@
                 Pay Bills
             </label>
             <input type="text">
-            <button class="edit">
+            <button class="edit-btn">
                 Edit
             </button>
-            <button class="delete">
+            <button class="delete-btn">
                 <img src="./remove.svg">
             </button>
         </li>
@@ -42,10 +42,10 @@
                 Go Shopping
             </label>
             <input type="text" value="Go Shopping" class="task">
-            <button class="edit">
+            <button class="edit-btn">
                 Save
             </button>
-            <button class="delete">
+            <button class="delete-btn">
                 <img src="./remove.svg" alt="Remove">
             </button>
         </li>
@@ -55,8 +55,8 @@
         <li><input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
+            <button class="edit-btn">Edit</button>
+            <button class="delete-btn">
                 <img src="./remove.svg" alt="Remove button">
             </button>
         </li>
