--- a/index.html
+++ b/index.html
@@ -6,61 +6,67 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-    <div class="info"><img src="./eisenhower-matrix.jpg">
+    <acide class="info">
+        <img src="./eisenhower-matrix.jpg" alt ="matrix">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
             Want more details&quest;
         </a>
-    </div>
+    </acide>
     <div class="content">
-        <p id="adding-element">
-            <label for="new-task">
+        <section id="adding-element">
+            <h3 for="new-task">
                 Add Item
-            </label>
+            </h3>
             <div class="task-row-wrapper">
                 <input id="new-task"class="task" type="text">
                 <button>
                     Add
                 </button>
             </div>
-        </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-        <li><input type="checkbox">
-            <label class="task">
-                Pay Bills
-            </label>
-            <input type="text">
-            <button class="edit-btn">
-                Edit
-            </button>
-            <button class="delete-btn">
-                <img src="./remove.svg">
-            </button>
-        </li>
-        <li class="edit-mode"><input type="checkbox">
-            <label class="task">
-                Go Shopping
-            </label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit-btn">
-                Save
-            </button>
-            <button class="delete-btn">
-                <img src="./remove.svg" alt="Remove">
-            </button>
-        </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-        <li><input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit-btn">Edit</button>
-            <button class="delete-btn">
-                <img src="./remove.svg" alt="Remove button">
-            </button>
-        </li>
-    </ul>
+        </section>
+
+    <section class="incomplete-tasks-content">
+        <h3>Todo</h3>
+        <ul id="incomplete-tasks">
+            <li><input type="checkbox">
+                <label class="task">
+                    Pay Bills
+                </label>
+                <input type="text">
+                <button class="edit-btn">
+                    Edit
+                </button>
+                <button class="delete-btn">
+                    <img src="./remove.svg">
+                </button>
+            </li>
+            <li class="edit-mode"><input type="checkbox">
+                <label class="task">
+                    Go Shopping
+                </label>
+                <input type="text" value="Go Shopping" class="task">
+                <button class="edit-btn">
+                    Save
+                </button>
+                <button class="delete-btn">
+                    <img src="./remove.svg" alt="Remove">
+                </button>
+            </li>
+        </ul>
+    </section>
+    <section class="completed-tasks-content">
+        <h3>Completed</h3>
+        <ul id="completed-tasks">
+            <li><input type="checkbox" checked>
+                <label class="task">See the Doctor</label>
+                <input type="text" class="task">
+                <button class="edit-btn">Edit</button>
+                <button class="delete-btn">
+                    <img src="./remove.svg" alt="Remove button">
+                </button>
+            </li>
+        </ul>
+    </section>
     </div>
 <script src="app.js"></script>
 </body>
